fix(login): properly align background image

--- a/login.css
+++ b/login.css
@@ -1,9 +1,17 @@
 body {
-  background-color: white;
   background-image: url(background.png);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
+  width: 100vw;
+  padding: 0;
+  margin: 0;
 }
 
 h1 {
+  margin: 0;
+  padding: 10px;
   color: rgb(255, 166, 0);
   text-align: center;
   font-family: Bahnschrift;
@@ -30,7 +38,7 @@ p {
 
 .login-container {
   width: max-content;
-  margin: 20px;
+  padding: 20px;
 
 }
 
